--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://tonymakis.github.io/TicTacWhoa",
   "name": "TicTacWhoa",
   "version": "0.0.1",
   "private": true,
@@ -6,11 +7,15 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "web": "react-scripts start",
+    "build": "react-scripts build",
     "start": "react-native start",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "test": "jest",
     "lint": "eslint ."
   },
   "dependencies": {
+    "gh-pages": "^3.1.0",
     "react": "17.0.1",
     "react-dom": "^17.0.1",
     "react-native": "0.64.0",
